getting_started/test_files/semantic_errors/UndeclaredClassMember.cpm
class Box {
  value: int
}

main(): int {
  volatile box: Box := Box()
  print(box.missing)
  return 0
}
